# CSMI_Notes

./: .gitignore  README.md  environment.yml  main.rs
M1 S1/: 统计.md
M1 S1/Algorithmique et graphes/: CH0.md  CH11.md  CH12.md  CH13.md  CH14.md  CH21.md  CH22.md  CH23.md  CH31.md  CH32.md  CH33.md  EXERCISE.md
M1 S1/Algorithmique et graphes/Introduction to Algorithm/: 目录.md
M1 S1/Algorithmique et graphes/révision/: 1-1.md  1-2.md  1-3.md  1-4.md  2-1.md  2-2.md  2-3.md  3-1.md  3-2.md  3-3.md
M1 S1/Base de données/: CH0.md  Untitled-1.sql  exam.sql  exammm.py  exammm.sql  révision.md
M1 S1/C++/: CH 1 Introduction à la programmation en C++.md  CH 2 Les classes et objets.md  CH 3 Héritage et polymorphisme.md  CH 4 Les flots d'entrée et de sortie.md  CH 5 les templates et meta-programmation.md  CH 6 La STL.md  CH 7 Exceptions et C++ Moderne.md  CH Cmake.md  CH0.md
M1 S1/C++/EXAM/: 1.cpp  main  main.cpp  main2  main2.cpp
M1 S1/Calcul haute performance 1/: CH0.md  Résumé.md
M1 S1/Calcul haute performance 1/TP/: test  test.cpp
M1 S1/Calcul haute performance 1/TP/TP_Simulation/: CMakeLists.txt
M1 S1/Calcul haute performance 1/TP/TP_Simulation/src/: grid_utilities.hpp  wave-parallel.cpp
M1 S1/Calcul haute performance 1/révision/: 01.md  02.md  03.md  04.md
M1 S1/Calcul scientifique 1/: CH0.md  CH1.md  CH11.md  CH12.md  CH2.md  CH3.md  CH4.md
M1 S1/Calcul scientifique 1/EXAM_cs1/: Cargo.toml
M1 S1/Calcul scientifique 1/TP/: main1.rs
M1 S1/Calcul scientifique 1/révision/: 01扩散方程.md  02传输方程.md  03拉普拉斯方程.md  04波动方程.md  exam.md  exam1.md  exam_as.md
M1 S1/Calcul scientifique 2/: CH0.md  CH1.md  CH2.md  CH3.md  CH4.md  CH5.md  Chapitre 1 Introduction non.md  Chapitre 1 Introduction.md
M1 S1/Calcul scientifique 2/1/: CH1.md  整理.md
M1 S1/Calcul scientifique 2/EXAM/: main.ipynb
M1 S1/Calcul scientifique 2/TP/: TP 1.ipynb  TP1.md  TP_1.ipynb  TP_1_Yehua.ipynb
M1 S1/Calcul scientifique 2/révision/: 01.md  02.md  03.md  04.md  05.md
M1 S1/Projet 1/: CH0.md  fe pre EN.md  fe pre.md  fe.md  matrix EN.md  matrix.md
M1 S1/Python+Plus/: CH0.md  Data.md  test.ipynb  模型.md
M1 S1/Python+Plus/alea/: 100-ETU=analyse_en_composantes_principales.ipynb  110-ETU=exam_2024_2025.ipynb  30-ETU-histogramme et densite.ipynb  40-ETU = lois.ipynb  50-ETU= simulation-par-inversion.ipynb  51-ETU = simulation-par-rejet.ipynb  52-ETU = box-muller-et-sphere.ipynb  55-ETU-challenge=configuration_de_particules.ipynb  60-ETU=TCL_intervalConfiance_student.ipynb  70-ETU=test-Principe et Student.ipynb  71-ETU=test-Kolmogorov Smirnov.ipynb  73-ETU=test chi2 et Wilcoxon.ipynb  75-ETU-DEFI = remoyennage.ipynb  80-ETU=Markov_definition+proba_invariante+theo_ergodique.ipynb  81-ETU=convergence_en_loi+reversibilite.ipynb  84-ETU=point_absorbant+estimation.ipynb  85-ETU=classification_des_etats+cas_infini.ipynb  90-ETU=Ehrenfest_Wright_Fisher.ipynb  91-ETU=iteratif_page_ranking.ipynb  92-ETU=Galton Watson.ipynb
M1 S1/Python+Plus/data/: 01-ETU = cours = apprentissage de données.ipynb  02-ETU = cours = modélisation probabiliste.ipynb  03-ETU = biais-variance.ipynb  10-ETU = tensors.ipynb  100-ETU=influence.ipynb  110-ETU=2d_studies.ipynb  20-ETU = gradients.ipynb  21-ETU = descente de gradient.ipynb  30-ETU = models.ipynb  40-ETU = optimizer.ipynb  45-ETU-cours = classification, la technique.ipynb  50-ETU = agent et early stopping.ipynb  60-ETU = classification_binaire.ipynb  70-ETU = classif_multi.ipynb  80-ETU = arbre de décision.ipynb  85-ETU = forêt aléatoire.ipynb
M1 S1/Python+Plus/py/: 10-ETU = boucle.ipynb  11-ETU = dictionnaire.ipynb  13-ETU = objet + message d_erreur + simple-coding-style.ipynb  20-ETU = passage par valeur ou référence.ipynb  30-ETU = matplotlib.ipynb  40-ETU = numpy.ipynb  45-ETU-DEFI = numpy et montecarlo.ipynb  47-ETU = numpy et le broadcasting.ipynb
M1 S1/Python+Plus/signal 1/: 10-ETU = sin-cos series.ipynb  11-ETU = exp series.ipynb  12-ETU-DEFI = orthogonal polynomials.ipynb  13-ETU-DEFI = énergie d_un signal.ipynb
M1 S1/Python+Plus/signal 2/: 10-ETU = Comprendre un Module.ipynb  31-ETU = conv net.ipynb  (+15 more)
M1 S1/Systèmes d'exploitation/: CH0.md  CH1.md  main.c
M1 S2/Apprentissage Auto scientifique/: CH0.md  CH1.md  CH2.md  CH3.md  CH4.md
M1 S2/Calcul Haute performance 2/: CH0.md  TP1_Yehua.md  grid2d.hpp  grid2d.tgz  kfrog  leapfrog  leapfrog2d.py
M1 S2/Calcul Haute performance 2/TP2/: CMakeLists.txt  README.md
M1 S2/Calcul Haute performance 2/TP2/src/: grid2d.cpp  grid2d.hpp  leapfrog2d.cpp
M1 S2/Calcul Haute performance 2/minikok/: CMakeLists.txt  minikok.cpp
M1 S2/Optimisation/: CH0.md  CH1.md  CH2.md  CH3.md  CH4.md  TD1.md  TD2.md  TD3.md
M1 S2/Project 2/: 1.geo  toto.geo
M1 S2/Signal et images/: CH0.md
M2 S3/Contrôle optimal/: Start_Gekko.ipynb  TP1.ipynb  TP2.ipynb  TP3.ipynb  Untitled 1.md  Untitled.md  c2.md  c21.md  ch 1.md
M2 S3/Incertitudes/: CH1.md  Yehua.ipynb  exam_yehua.ipynb
M2 S3/PrePost/: 1.cpp  1.py  2.py  2Dto3D.geo  2Dto3D2.geo  3.py  Slide.md  adapt.geo  ex1.geo  hole.geo  square-transfinite-surface.gesquare-transfinite-surface.geo  square.geo  testtt.geo  untitled.geo  untitled1.geo  untitled2.geo
M2 S3/PrePost/Visualization TP/base/: CMakeLists.txt  Debug.h  Editor.cpp  Editor.h  IsoSurfacer.cpp  IsoSurfacer.h  UserInterface.cpp  UserInterface.h  main.cpp
M2 S3/PrePost/Visualization TP/cylinderExemple/: CMakeLists.txt  CylinderExample.cpp
M2 S3/Rom/: 01 rbm_tiny_lab.ipynb  02 HW_EIM_3param.ipynb  03 HW_GEIM_DA.ipynb  04 PBDW_DataAssimilation_exercise.ipynb  05 kf_exercises.ipynb  06 enkf_lorenz.ipynb  rbm_tiny_lab.ipynb  rbm_tiny_lab_1.ipynb
M2 S3/SciML 2/: 1.py  EX1.ipynb  ROM_1D_JAX_Equinox_Student.ipynb  TP1.py  TP_seqnet.py  cours 1.md  cours 10.md  cours 11 2 fonction bonus.py  cours 11 tp.ipynb  cours 11.md  cours 12.md  cours 13 tp correction.py  cours 13 tp.ipynb  cours 13.md  cours 14.md  cours 2 3 TP.py  cours 2 3 jax.ipynb  cours 2 3.md  cours 4 TP correction.py  cours 4.md  cours 5.md  cours 6 tp.py  cours 6.md  cours 7.md  cours 8 TP3.py  cours 8 tp.ipynb  cours 8.md  cours 9.md  jax.ipynb
(+419 files in other folders)
